--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -8,6 +8,15 @@
     tools:context=".ui.Feedback.Fragment_Feedback">
 
     <!-- TODO: Update blank fragment layout -->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/feedbackload"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_gravity="center"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="standardloader.json"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -21,60 +30,58 @@
             >
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/c1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:padding="25dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
                 android:elevation="10dp"
-                >
+                android:padding="25dp"
+                app:cardCornerRadius="10dp">
+
                 <LinearLayout
-                    android:background="@color/igniteSecondaryLight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:background="@color/igniteSecondaryLight"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:textColor="@color/contrasText"
                         android:layout_height="wrap_content"
-                        android:text="Ignite"
-                        android:textSize="20dp"
                         android:padding="20dp"
-                        />
+                        android:text="IGNITE"
+                        android:textColor="@color/lime"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <com.hsalf.smilerating.SmileRating
                         android:id="@+id/smile_rating_Ignite"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/contrasText"
                         android:layout_margin="10dp"
-                        />
+                        android:textColor="@color/contrasText" />
 
 
+                    <me.zhanghai.android.materialedittext.MaterialTextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
 
-<me.zhanghai.android.materialedittext.MaterialTextInputLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textColorHint="@color/contrasText"
+                        android:textColorHint="@color/contrasText">
 
-    android:layout_margin="20dp"
-    >
+                        <me.zhanghai.android.materialedittext.MaterialEditText
+                            android:id="@+id/username_editText"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="your views..."
+                            android:textColor="@color/contrasText"
 
-    <me.zhanghai.android.materialedittext.MaterialEditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="your views..."
-        android:textColor="@color/contrasText"
-        android:id="@+id/username_editText"
+                            >
 
-        >
+                        </me.zhanghai.android.materialedittext.MaterialEditText>
 
-    </me.zhanghai.android.materialedittext.MaterialEditText>
-
-</me.zhanghai.android.materialedittext.MaterialTextInputLayout>
+                    </me.zhanghai.android.materialedittext.MaterialTextInputLayout>
 
 
                 </LinearLayout>
@@ -82,55 +89,55 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/c2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:padding="25dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
                 android:elevation="10dp"
-                >
+                android:padding="25dp"
+                app:cardCornerRadius="10dp">
+
                 <LinearLayout
-                    android:background="@color/igniteSecondaryLight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:background="@color/igniteSecondaryLight"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:textColor="@color/contrasText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Website"
-                        android:textSize="20dp"
                         android:padding="20dp"
-                        />
+                        android:text="Website"
+                        android:textColor="@color/lime"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <com.hsalf.smilerating.SmileRating
                         android:id="@+id/smile_rating_website"
                         android:layout_width="match_parent"
 
-                        android:textColor="@color/contrasText"
+                        android:layout_height="wrap_content"
 
-                        android:layout_height="wrap_content" />
+                        android:textColor="@color/contrasText" />
 
 
                     <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColorHint="@color/contrasText"
                         android:layout_margin="20dp"
+                        android:textColorHint="@color/contrasText"
 
                         >
 
                         <me.zhanghai.android.materialedittext.MaterialEditText
+                            android:id="@+id/website_desc_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="your views..."
-                            android:textColor="@color/contrasText"
-                            android:id="@+id/website_desc_tv"
                             android:layout_margin="10dp"
-                            >
+                            android:hint="your views..."
+                            android:textColor="@color/contrasText">
 
                         </me.zhanghai.android.materialedittext.MaterialEditText>
 
@@ -139,40 +146,40 @@
                 </LinearLayout>
 
 
-
             </androidx.cardview.widget.CardView>
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/c3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:padding="25dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
                 android:elevation="10dp"
-                >
+                android:padding="25dp"
+                app:cardCornerRadius="10dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:background="@color/igniteSecondaryLight"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Android App"
-                        android:textColor="@color/contrasText"
-                        android:textSize="20dp"
                         android:padding="20dp"
-                        />
+                        android:text="Android App"
+                        android:textColor="@color/lime"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <com.hsalf.smilerating.SmileRating
                         android:id="@+id/smile_rating_app"
-                        android:textColor="@color/contrasText"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/contrasText" />
 
                     <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                         android:layout_width="match_parent"
@@ -183,13 +190,12 @@
                         >
 
                         <me.zhanghai.android.materialedittext.MaterialEditText
+                            android:id="@+id/app_desc_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:textColor="@color/contrasText"
-                            android:hint="your views..."
-                            android:id="@+id/app_desc_tv"
                             android:layout_margin="10dp"
-                            >
+                            android:hint="your views..."
+                            android:textColor="@color/contrasText">
 
                         </me.zhanghai.android.materialedittext.MaterialEditText>
 
@@ -200,56 +206,55 @@
             </androidx.cardview.widget.CardView>
 
 
-
             <androidx.cardview.widget.CardView
+                android:id="@+id/c4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:padding="25dp"
-                android:layout_marginRight="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
                 android:elevation="10dp"
-                >
+                android:padding="25dp"
+                app:cardCornerRadius="10dp">
+
                 <LinearLayout
-                    android:background="@color/igniteSecondaryLight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
+                    android:background="@color/igniteSecondaryLight"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hospitality"
-                        android:textSize="20dp"
-                        android:textColor="@color/contrasText"
                         android:padding="20dp"
-                        />
+                        android:text="Hospitality"
+                        android:textColor="@color/lime"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <com.hsalf.smilerating.SmileRating
-                        android:textColor="@color/contrasText"
                         android:id="@+id/smile_rating_hospitality"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/contrasText" />
 
                     <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColorHint="@color/contrasText"
                         android:layout_margin="20dp"
+                        android:textColorHint="@color/contrasText"
 
                         >
 
                         <me.zhanghai.android.materialedittext.MaterialEditText
+                            android:id="@+id/hospitality_desc_tv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:hint="your views..."
-                            android:textColorHint="@color/contrasText"
-                            android:textColor="@color/contrasText"
-                            android:id="@+id/hospitality_desc_tv"
-
                             android:layout_margin="10dp"
-                            >
+                            android:hint="your views..."
+                            android:textColor="@color/contrasText"
+
+                            android:textColorHint="@color/contrasText">
 
                         </me.zhanghai.android.materialedittext.MaterialEditText>
 
@@ -265,10 +270,11 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+
                 android:layout_margin="20dp"
                 android:background="@drawable/button_shape"
                 android:text="Submit"
-                android:textColor="@color/black" />
+                android:textColor="@color/contrasText" />
 
         </LinearLayout>
     </ScrollView>
