--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,7 +34,7 @@
     <color name="igniteSecondaryLight">#5D5052</color>
     <color name="igniteSecondaryDark">#3E3638</color>
     <color name="igniteSecondary">#5D5052</color>
-     <color name="colorAccent">#4CAF50</color>
+     <color name="colorAccent">#8BC34A</color>
     <color name="materialGreen">#4CAF50</color>
      <color name="transparentGray">#B31E88E5</color>
       <color name="lightgray">#ededed</color>
