--- a/app/src/main/res/layout/all_participants_card.xml
+++ b/app/src/main/res/layout/all_participants_card.xml
@@ -111,7 +111,7 @@ android:textColor="@color/contrasText"
                         android:layout_marginBottom="8dp"
                         android:text="College Name"
                         android:textAlignment="center"
-                        android:textColor="@color/contrasText"
+                        android:textColor="@color/lime"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
