--- a/app/src/main/res/layout/fragment_event_registration.xml
+++ b/app/src/main/res/layout/fragment_event_registration.xml
@@ -95,6 +95,19 @@
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView">
             </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/lottie_event_reg"
+                app:lottie_fileName="standardloader.json"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
