--- a/app/src/main/res/layout/fragment_send_notification.xml
+++ b/app/src/main/res/layout/fragment_send_notification.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/black"
     android:layout_height="match_parent"
     tools:context=".Admin.SendNotification.SendNotification">
 
     <TextView
         android:id="@+id/textView17"
+        android:textColor="@color/contrasText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -28,18 +30,20 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
+       android:background="@drawable/edit_text_shape2"
         android:hint="title"
-        android:inputType="textLongMessage"
+        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
         android:id="@+id/textView18"
+        android:textColor="@color/contrasText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Body"
+        android:text="Notification Body"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="@+id/not_title"
@@ -53,19 +57,22 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="notification body"
-        android:inputType="textLongMessage"
+        android:background="@drawable/edit_text_shape2"
+        android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView18"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <Button
+
         android:id="@+id/not_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/button_shape"
         android:text="Submit"
+        android:textColor="@color/contrasText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/not_body" />
